--- a/style.css
+++ b/style.css
@@ -54,3 +54,9 @@ button:active {
 .operator-btn:active {
   background-color: hsl(39, 100%, 75%);
 }
+@media (width >= 800px) {
+  #calculator {
+    max-width: 400px;
+    width: 400px;
+  }
+}
