--- a/style.css
+++ b/style.css
@@ -56,7 +56,8 @@ button:active {
 }
 @media (width >= 800px) {
   #calculator {
-    max-width: 350px;
-    width: 350px;
+    flex-direction: row-reverse;
+    align-items: center;
+    justify-content: space-evenly;
   }
 }
